test/spec_vectors/simd_lane/fail/module_80.wat
(module (func (result v128) (i32x4.replace_lane 0 (i32.const 0) (i32.const 1))))